# PicoMite-VGA-Edition

./: BOM_V1.0.a.xlsx  BOM_V1.1a.xlsx  CMakeLists.txt  Include.h  PickAndPlace_V1.0a.xlsx  PickAndPlace_V1.1a.xlsx  PicoMiteVGA.pio  PicoMiteVGAV1.0.eprj  PicoMiteVGAV1.0BOM.xlsx  PicoMiteVGAV1.0CPL.xlsx  PicoMiteVGAV1.1.eprj  PicoMiteVGAV1.1BOM.xlsx  PicoMiteVGAV1.1CPL.xlsx  README.md
